       be callable.

Limitations:
    1. JDK 1.3.1 or higher is required
    2. JavaScript support does not include some DOM properties
    3. The JavaScript assignment Document.cookie= does not restrict the cookie by path and domain
    4. Only table cells and explicit paragraphs are recognized as text blocks


Revision History:
 1-Dec-2004:
    Acknowledgements:
        Thanks to Yaqoub Jaiousi for identifying the problem with buttons outside of forms.

    Problems fixed:
        1. bug #1074232 buttons outside of forms were only recognized if defined with the <button> tag, not <input>
        2. bug #1073810 a null pointer exception is no longer thrown when javascript sets a control value to null
        3. bug #1052779 window.open() with javascript URL no longer throws a null pointer exception or class cast exception

28-Oct-2004:
    Acknowledgements:
        Thanks to Vladimir Korenev for providing an implementation for style.visibility, element.tagName, and element.nodeName

    Problems fixed:
        1. patch #1046516 property style.visibility is now supported

25-Oct-2004:
    Problems fixed:
        1. bug #1051123 ServletUnit handling of parameter encoding was not cleaning up url-encodings

17-Oct-2004:
    Problems fixed:
        1. bug #1047367 frames defined by javascript were not being detected.

14-Oct-2004:
    Problems fixed:
        1. bug #1046597 tables nested inside paragraphs were not being seen by the enclosing page. This bug was introduced
           in 1.6 and has now been corrected.

13-Oct-2004:
    Acknowledgements:
        Thanks to Satish Kolli for fixing bug #1040770
        Thanks to Fabrizio Guistina for supplying an implementation of locale handling for ServletUnitHttpResponse

    Problems fixed:
        1. bug #1040770 the Image.name JavaScript property is now supported
        2. bug #1044820 ServletUnit now implements HttpServletResponse.getLocale() and setLocale()

5-Oct-2004:
    Acknowledgements: