@@ -14,6 +14,10 @@ Limitations:
 
 
 Revision History:
+26-Dec-2004:
+    Problems fixed:
+        1. bug #1087180 setting a numeric value into a form parameter was appending a trailing decimal zero
+
  1-Dec-2004:
     Acknowledgements:
         Thanks to Yaqoub Jaiousi for identifying the problem with buttons outside of forms.
